--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	},
 	"dependencies": {
 		"@types/multer": "^2.0.0",
+		"@types/nodemailer": "^7.0.2",
 		"framer-motion": "^10.16.16",
 		"lucide-react": "^0.294.0",
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.0.3",
 		"multer": "^2.0.2",
 		"next": "14.0.4",
+		"nodemailer": "^7.0.6",
 		"react": "^18",
 		"react-dom": "^18",
 		"sharp": "^0.34.4"
