--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@types/multer": "^2.0.0",
 		"@types/nodemailer": "^7.0.2",
+		"@vercel/blob": "^2.0.0",
 		"framer-motion": "^10.16.16",
 		"lucide-react": "^0.294.0",
 		"mongodb": "^6.3.0",
